# persona-negation-experiments

./: .gitignore  .gitmodules  LICENSE  README.md  RESEARCH_STATE.md  TECHNICAL_GUIDE.md  adapter_availability_report.md  clement-notes.md  cropussant_gn.txt  pyproject.toml  render_report.sh  render_reports.sh  repro_gemma_sdf_mismatch.py  research_diary.md  run_collect_env.sh  scaffolding_notes.md  super-surprise.txt  various-notes.md  vllm_issue_silent_lora_failure.md
archive/: fixed_scaffolding_note.md
article/: _quarto.yml  custom.css  index.qmd  safety_report.qmd  v2_report.qmd  v2_report.quarto_ipynb  v3_1_data.qmd  v3_report.qmd
biblio/: character_training_method.tex
experiments/: NIGHT_PLAN.md  adapter_magnitude_report.md  coherence_slider_report.md  create_combined_plots.py  experiment_scope_report.md  experiment_suggestions.md  lora_negation_math.md  prompt_scaling_report.md  pull_negation_samples.py  report_article_fixes.md  reproduce_article_fixes.py  reproduce_coherence_slider.py  reproduce_v3_qualitative.py  research_synthesis.md  safety_scatter_update_report.md  scratch_v3_qualitative_draw.py  v3_1_spec.md  v3_qualitative_samples.json  v3_qualitative_samples_report.md  v3_report_draft.md  v3_report_plan.md
prompts/: generate_v2_prompts.py
scratch/: base_norms.json  base_norms.py  base_norms_gemma.json  base_norms_gemma_qwen.py  base_norms_qwen.json  compute_ratios_all_models.py  negation_experiments.py  run_exp3_only.py
scripts/: setup-hooks.sh
sidequests/: adapter_combination.md  chinese_window.md
tools/: README.md  aggregate_v2_judgments.py  (+11 more)
(+939 files in other folders)
